--- a/app/src/main/res/layout/activity_suggest_offer.xml
+++ b/app/src/main/res/layout/activity_suggest_offer.xml
@@ -85,30 +85,38 @@
                 android:textSize="15sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
-        <com.smarteist.autoimageslider.SliderView
-            android:id="@+id/imageSlider3"
+        <TextView
+            android:id="@+id/textView17"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="30dp"
             android:layout_below="@+id/offerdesc"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
-            android:layout_marginStart="-7dp"
+            android:layout_marginStart="10dp"
             android:layout_marginTop="5dp"
-            android:layout_marginEnd="0dp"
-            android:background="@color/lightPurple"
-            app:sliderAnimationDuration="600"
-            app:sliderAutoCycleDirection="back_and_forth"
-            app:sliderAutoCycleEnabled="true"
-            app:sliderIndicatorAnimationDuration="600"
-            app:sliderIndicatorGravity="center_horizontal|bottom"
-            app:sliderIndicatorMargin="15dp"
-            app:sliderIndicatorOrientation="horizontal"
-            app:sliderIndicatorPadding="3dp"
-            app:sliderIndicatorRadius="2dp"
-            app:sliderIndicatorSelectedColor="#5A5A5A"
-            app:sliderIndicatorUnselectedColor="#FFF"
-            app:sliderScrollTimeInSec="2"
-            app:sliderStartAutoCycle="false" />
+            android:layout_marginEnd="20dp"
+            android:text="Design Price"
+            android:textColor="@color/purple_500"
+            android:textSize="20sp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/offerprice"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="350dp"
+            android:layout_height="65dp"
+            android:layout_below="@id/textView17"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="5dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/offerpricee"
+                android:layout_width="340dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:textSize="15sp" />
+        </com.google.android.material.textfield.TextInputLayout>
 
         <Button
             android:id="@+id/button6"
@@ -120,16 +128,5 @@
 
             android:text="@string/send" />
 
-        <TextView
-            android:id="@+id/textView14"
-            android:layout_width="match_parent"
-            android:layout_height="39dp"
-            android:layout_below="@+id/imageSlider3"
-            android:layout_alignParentStart="true"
-            android:layout_marginStart="14dp"
-            android:layout_marginTop="5dp"
-            android:text="@string/uploadImage"
-            android:textColor="@color/link"
-            android:textSize="20sp" />
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
