--- a/app/src/main/res/layout/activity_suggest_design.xml
+++ b/app/src/main/res/layout/activity_suggest_design.xml
@@ -83,11 +83,44 @@
                 android:textSize="15sp" />
         </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/textView16"
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:layout_below="@+id/designdesc"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="20dp"
+            android:text="Design Price"
+            android:textColor="@color/purple_500"
+            android:textSize="20sp" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/designprice"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="350dp"
+            android:layout_height="65dp"
+            android:layout_below="@id/textView16"
+            android:layout_alignParentStart="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="5dp">
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/designpricee"
+                android:layout_width="340dp"
+                android:layout_height="50dp"
+                android:layout_marginStart="10dp"
+                android:layout_marginTop="10dp"
+                android:layout_marginEnd="20dp"
+                android:textSize="15sp" />
+        </com.google.android.material.textfield.TextInputLayout>
+
         <com.smarteist.autoimageslider.SliderView
             android:id="@+id/imageSlider2"
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:layout_below="@+id/designdesc"
+            android:layout_below="@+id/designprice"
             android:layout_alignParentStart="true"
             android:layout_alignParentEnd="true"
             android:layout_marginStart="-7dp"
