--- a/app/src/main/res/layout/fragment_designer_home.xml
+++ b/app/src/main/res/layout/fragment_designer_home.xml
@@ -49,6 +49,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
         <TextView
+            android:id="@+id/designernametitle"
             android:layout_width="match_parent"
             android:layout_height="30dp"
             android:fontFamily="cursive"
