--- a/app/src/main/res/layout/applicantscard.xml
+++ b/app/src/main/res/layout/applicantscard.xml
@@ -99,7 +99,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/applicantdesignerName">
 
                 <view
-                    android:id="@+id/deschat"
+                    android:id="@+id/applicantaccept"
                     class="android.widget.Button"
                     android:layout_width="30dp"
                     android:layout_height="40dp"
@@ -110,25 +110,25 @@
                     android:background="@drawable/ic_baseline_done_24" />
 
                 <view
-                    android:id="@+id/accept"
+                    android:id="@+id/applicantchat"
                     class="android.widget.Button"
                     android:layout_width="27dp"
                     android:layout_height="30dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_toEndOf="@+id/reject"
+                    android:layout_toEndOf="@+id/applicantreject"
                     android:background="@drawable/ic_chat" />
 
                 <view
-                    android:id="@+id/reject"
+                    android:id="@+id/applicantreject"
                     class="android.widget.Button"
                     android:layout_width="30dp"
                     android:layout_height="40dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
-                    android:layout_toEndOf="@+id/deschat"
+                    android:layout_toEndOf="@+id/applicantaccept"
                     android:background="@drawable/ic_baseline_highlight_off_24" />
             </RelativeLayout>
 
