--- a/app/src/main/res/layout/activity_book.xml
+++ b/app/src/main/res/layout/activity_book.xml
@@ -9,7 +9,7 @@
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="630dp"
+        android:layout_height="650dp"
         android:background="@color/totch"
         android:layout_centerHorizontal="true"
         android:layout_centerVertical="true"
@@ -21,7 +21,7 @@
         <CalendarView
             android:id="@+id/calendarView"
             android:layout_width="361dp"
-            android:layout_height="356dp"
+            android:layout_height="345dp"
             android:layout_marginTop="8dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -39,6 +39,34 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
+            <Spinner
+                android:id="@+id/hours"
+                android:layout_width="120dp"
+                android:layout_height="50dp"
+                android:popupBackground="@color/totch"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/calendarView"
+                android:layout_marginStart="20dp"
+                android:layout_marginTop="12dp"/>
+        <Spinner
+            android:id="@+id/minutes"
+            android:layout_width="120dp"
+            android:layout_height="50dp"
+            android:popupBackground="@color/totch"
+            app:layout_constraintStart_toEndOf="@id/hours"
+            app:layout_constraintTop_toBottomOf="@+id/calendarView"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="12dp"/>
+
+        <Spinner
+            android:id="@+id/interval"
+            android:layout_width="90dp"
+            android:layout_height="50dp"
+            android:popupBackground="@color/totch"
+            app:layout_constraintStart_toEndOf="@id/minutes"
+            app:layout_constraintTop_toBottomOf="@+id/calendarView"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="12dp"/>
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/tt"
             style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -47,9 +75,7 @@
             android:layout_marginStart="19dp"
             android:layout_marginTop="12dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/calendarView">
-
-
+            app:layout_constraintTop_toBottomOf="@+id/hours">
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/editTextTextPersonName2"
                 android:layout_width="310dp"
@@ -59,7 +85,7 @@
                 android:ems="10"
                 android:hint="@string/numofinv"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/calendarView"></com.google.android.material.textfield.TextInputEditText>
+                app:layout_constraintTop_toBottomOf="@+id/hours"></com.google.android.material.textfield.TextInputEditText>
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
@@ -68,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="10dp"
             android:background="@drawable/roundedcorners"
             android:text="@string/contopay"
             app:layout_constraintBottom_toBottomOf="parent"
