--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -58,8 +58,9 @@
                 android:layout_below="@+id/tv"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="8dp" />
-
+                android:popupBackground="@color/totch"
+                android:layout_marginEnd="8dp"
+                android:backgroundTint="@color/totch"/>
                 android:layout_alignParentStart="true"
                 android:layout_alignParentEnd="true"
                 android:layout_marginStart="0dp"
