--- a/app/src/main/res/layout/activity_designer_navigation.xml
+++ b/app/src/main/res/layout/activity_designer_navigation.xml
@@ -23,7 +23,7 @@
     <ScrollView
         android:id="@+id/scrollView3"
         android:layout_width="match_parent"
-        android:layout_height="620dp"
+        android:layout_height="700dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -32,7 +32,7 @@
             android:id="@+id/nav_host_fragment_activity_designer_navigation"
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
-            android:layout_height="620dp"
+            android:layout_height="match_parent"
             app:defaultNavHost="true"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintRight_toRightOf="parent"
