--- a/app/src/main/res/layout/applicantscard.xml
+++ b/app/src/main/res/layout/applicantscard.xml
@@ -3,13 +3,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/relapplicant"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <androidx.cardview.widget.CardView
         android:id="@+id/applicantscard"
         android:layout_width="330dp"
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginBottom="8dp"
@@ -40,11 +41,11 @@
             <TextView
                 android:id="@+id/applicanttitle"
                 android:layout_width="150dp"
-                android:layout_height="33dp"
+                android:layout_height="30dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="10dp"
                 android:maxLines="1"
-                android:text="Designer Name "
+                android:text="title "
                 android:textColor="@color/purple_500"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
@@ -54,7 +55,7 @@
             <TextView
                 android:id="@+id/applicantprice"
                 android:layout_width="150dp"
-                android:layout_height="33dp"
+                android:layout_height="30dp"
                 android:layout_marginTop="10dp"
                 android:layout_marginEnd="10dp"
                 android:text="Price"
@@ -67,7 +68,7 @@
             <TextView
                 android:id="@+id/applicantdesignerName"
                 android:layout_width="150dp"
-                android:layout_height="33dp"
+                android:layout_height="25dp"
                 android:layout_marginStart="8dp"
                 android:layout_marginTop="3dp"
                 android:maxLines="1"
@@ -80,10 +81,10 @@
             <TextView
                 android:id="@+id/applicantUserName"
                 android:layout_width="150dp"
-                android:layout_height="33dp"
+                android:layout_height="25dp"
                 android:layout_marginTop="3dp"
                 android:maxLines="1"
-                android:text="Designer Name "
+                android:text="@string/username"
                 android:textColor="#000"
                 android:textStyle="bold"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -92,7 +93,7 @@
 
             <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="40dp"
+                android:layout_height="50dp"
                 android:layout_marginTop="2dp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
@@ -101,7 +102,7 @@
                 <view
                     android:id="@+id/applicantaccept"
                     class="android.widget.Button"
-                    android:layout_width="30dp"
+                    android:layout_width="33dp"
                     android:layout_height="40dp"
                     android:layout_alignParentStart="true"
                     android:layout_alignParentBottom="true"
@@ -112,8 +113,8 @@
                 <view
                     android:id="@+id/applicantchat"
                     class="android.widget.Button"
-                    android:layout_width="27dp"
-                    android:layout_height="30dp"
+                    android:layout_width="30dp"
+                    android:layout_height="33dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
@@ -123,13 +124,39 @@
                 <view
                     android:id="@+id/applicantreject"
                     class="android.widget.Button"
-                    android:layout_width="30dp"
+                    android:layout_width="33dp"
                     android:layout_height="40dp"
                     android:layout_alignParentBottom="true"
                     android:layout_marginStart="10dp"
                     android:layout_marginBottom="10dp"
                     android:layout_toEndOf="@+id/applicantaccept"
                     android:background="@drawable/ic_baseline_highlight_off_24" />
+
+                <TextView
+                    android:id="@+id/date"
+                    android:layout_width="150dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:paddingStart="10dp"
+                    android:layout_marginEnd="20dp"
+                    android:text="4/1/1997 5:30 AM"
+                    android:textAlignment="textStart"
+                    android:textSize="12sp" />
+
+                <TextView
+                    android:id="@+id/atendees"
+                    android:layout_width="150dp"
+                    android:layout_height="25dp"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:layout_marginEnd="20dp"
+                    android:layout_marginBottom="5dp"
+                    android:drawableStart="@drawable/ic_baseline_person_24"
+                    android:padding="5dp"
+                    android:paddingStart="10dp"
+                    android:text="1000"
+                    android:textSize="10sp" />
             </RelativeLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
