--- a/app/src/main/res/layout/chatcard.xml
+++ b/app/src/main/res/layout/chatcard.xml
@@ -3,11 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:id="@+id/relative"
     xmlns:android="http://schemas.android.com/apk/res/android">
     <androidx.cardview.widget.CardView
         android:id="@+id/cardi4"
         android:layout_width="330dp"
-        android:layout_height="150dp"
+        android:layout_height="170dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -18,7 +19,7 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="150dp"
+            android:layout_height="170dp"
             android:layout_centerHorizontal="true"
             android:layout_marginBottom="20dp"
             android:background="@color/totch">
@@ -37,19 +38,44 @@
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="3dp"
+                android:layout_marginTop="20dp"
                 android:text="Order Name"
                 android:textColor="@color/purple_500"
-                android:textSize="20sp"
+                android:textSize="18sp"
                 app:layout_constraintStart_toEndOf="@+id/img2"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
+                android:id="@+id/userdate"
+                android:layout_width="100dp"
+                android:layout_height="20dp"
+                android:layout_marginTop="5dp"
+                android:layout_marginEnd="1dp"
+                android:text="4/1/1997 5 : 30 PM"
+                android:textSize="10sp"
+                android:paddingTop="3dp"
+                android:paddingEnd="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/useratendees"
+                android:layout_width="90dp"
+                android:layout_height="23dp"
+                android:layout_marginEnd="3dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                android:drawableStart="@drawable/ic_baseline_person_24"
+                android:padding="5dp"
+                android:paddingStart="40dp"
+                android:text="1000"
+                android:textSize="10sp"
+                app:layout_constraintTop_toBottomOf="@+id/userdate"/>
+            <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="8dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginBottom="8dp"
                 android:text="price : xxxx$$"
                 android:textColor="@color/lightPurple"
@@ -64,7 +90,7 @@
                 android:layout_width="55dp"
                 android:layout_height="37dp"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:srcCompat="@drawable/delete" />
 
@@ -73,15 +99,15 @@
                 android:layout_width="61dp"
                 android:layout_height="34dp"
                 android:layout_marginBottom="8dp"
-                app:layout_constraintBottom_toTopOf="@+id/imageView2"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:srcCompat="@drawable/ic_chat" />
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:srcCompat="@drawable/ic_chat" app:layout_constraintVertical_bias="1.0"/>
 
             <TextView
                 android:id="@+id/textView7"
                 android:layout_width="131dp"
                 android:layout_height="69dp"
-                android:layout_marginStart="10dp"
+                android:layout_marginStart="5dp"
                 android:layout_marginTop="10dp"
                 android:text="this is the order description"
                 android:textSize="18sp"
