--- a/app/src/main/res/layout/activity_right.xml
+++ b/app/src/main/res/layout/activity_right.xml
@@ -16,5 +16,5 @@
         android:paddingRight="10dp"
         android:paddingTop="5dp"
         android:text="Sample"
-        android:textColor="#000" />
+        android:textColor="@color/purple_500" />
 </LinearLayout>
