--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -162,10 +162,10 @@
                 android:layout_below="@+id/textView3"
                 android:layout_alignParentStart="true"
                 android:layout_marginStart="10dp"
-                android:layout_marginTop="5dp"
+                android:layout_marginTop="2dp"
                 android:layout_marginEnd="10dp"
-                android:text="@string/forgot"
-                android:textColor="@color/link" />
+                android:text=""
+                android:textColor="@color/red" />
 
             <TextView
                 android:id="@+id/textView"
