--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,7 +7,7 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
-
+    <color name="red">#d41111</color>
     <color name="lightPurple">#CFCCF9</color>
     <color name="beige">#E9E0b4</color>
     <color name="totch">#FEFDFB</color>
